# paintcannon

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.ts  package-lock.json  package.json  tsconfig.json
.husky/: reference-transaction
examples/: alt-screen-restart.ts  basic.ts  borders.ts  chunky-rounded-hover.ts  counter-button.ts  detach-reattach.ts  (+16 more)
paintcannon/: Cargo.toml  README.md  index.ts  main.ts  package.json  terminal-files.ts  tsconfig.json
paintcannon/examples/: alt-screen-restart.ts  basic.ts  borders.ts  centered-text.ts  chunky-rounded-hover.ts  copy-event.ts  counter-button.ts  css-grid.ts  destroy-nodes.ts  detach-reattach.ts  flexbox-properties.ts  focus-blur.ts  image-scroll.ts  images.ts  input.ts  keyboard-events.ts  less.ts  margin.ts  mouse-clicks.ts  native-scroll.ts  opacity-transition.ts  opacity.ts  overflow.ts  padding.ts  paste-images.ts  pong.ts  positioning.ts  pseudo-controlled-input.ts  scroll-percent-static.ts  scroll-percent.ts  scroll.ts  span-flex.ts  spans.ts  terminal-focus.ts  text-styles.ts  textarea.ts  transitions.ts  viewport-scroll.ts  visibility.ts
paintcannon/scripts/: verify-native-artifacts.mjs
paintcannon/src/: api.rs  engine.rs  event_notification.rs  frame.rs  image.rs  input.rs  layout.rs  lib.rs  line_break.rs  native_event.rs  paint.rs  selection.rs  style.rs  terminal.rs  text.rs  text_wrap.rs  transition.rs
paintcannon/src/engine/: runtime.rs  tests.rs
paintcannon/test/: events.test.ts  lifecycle.test.ts  mock-native.ts  native-lifecycle-check.mjs  terminal-files.test.ts
(+61 files in other folders)
