[package]
name = "paintcannon"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5"
crossterm = "0.29"
libc = "0.2"
napi = { version = "3", default-features = false, features = ["napi4", "dyn-symbols"] }
napi-derive = "3"
png = "0.18"
taffy = "0.10"
termprofile = { version = "0.2", features = ["color-cache", "convert", "terminfo"] }
unicode-width = "0.2"

[build-dependencies]
napi-build = "2"
